--- a/templates/index.html
+++ b/templates/index.html
@@ -2,13 +2,13 @@
 {% block title %}Hackaton github{% endblock %}
 {% block body %}
 
-<h1>Esta es la página principal</h1>
+<h1>Esta es la página principal xd </h1>
 
     <ul>
         {% for pagina in paginas %}
         <li><a href="{{ pagina }}">{{pagina}}</a></li>
         {% endfor %}
-        
+
     </ul>
 
 {% endblock %}
